[package]
name = "snapshot-cache"
version = "0.1.0"
edition = "2021"

[dependencies.snapshot-cache-core]
path = "libs/core"

[dependencies.snapshot-cache-async]
path = "libs/async"
optional = true

[dependencies.snapshot-cache-sync]
path = "libs/sync"
optional = true

[features]
default = []
sync = ["dep:snapshot-cache-sync"]
async = ["dep:snapshot-cache-async"]

# Config source features
github = ["snapshot-cache-sync?/github", "snapshot-cache-async?/github"]
http = ["snapshot-cache-sync?/http", "snapshot-cache-async?/http"]
s3 = ["snapshot-cache-sync?/s3", "snapshot-cache-async?/s3"]
