[package]
name = "snapshot-cache-async"
version = "0.1.0"
edition = "2024"

[dependencies]
snapshot-cache-core = { path = "../core" }

scheduled-thread-pool = "^0.2.7"
chrono = "^0.4.42"
tokio = { version = "^1.47.1", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "^0.1.89"
url = "^2.5.7"
arc-swap = "^1.7.1"

octocrab = { version = "^0.45.0", optional = true }
reqwest = {version = "^0.12.23", optional = true}
aws-sdk-s3 = { version = "^1.106.0", optional = true}
aws-smithy-http = { version = "^0.62.3", optional = true }

[features]
default = []
github = ["octocrab"]
http = ["reqwest"]
s3 = ["aws-sdk-s3", "aws-smithy-http"]
